samples/_failures_safe/1761130490_b3b6ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f5a5cd6.c: In function ‘handle_find_path’:
./samples/SAFE/__tmp_9f5a5cd6.c:184:12: error: missing terminating " character
  184 |     printf("
      |            ^
./samples/SAFE/__tmp_9f5a5cd6.c:184:5: error: expected expression at end of input
  184 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_9f5a5cd6.c:184:5: error: expected declaration or statement at end of input
